syntax = "proto3";
package img_syncer;

option go_package = "github.com/fregie/img_syncer/proto";

service ImgSyncer {
  rpc ListByDate (ListByDateRequest) returns (ListByDateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc FilterNotUploaded (stream FilterNotUploadedRequest) returns (stream FilterNotUploadedResponse) {}
  // SAMBA Drive
  rpc SetDriveSMB (SetDriveSMBRequest) returns (SetDriveSMBResponse) {}
  rpc ListDriveSMBShares (ListDriveSMBSharesRequest) returns (ListDriveSMBSharesResponse) {}
  rpc ListDriveSMBDir (ListDriveSMBDirRequest) returns (ListDriveSMBDirResponse) {}
  rpc SetDriveSMBShare (SetDriveSMBShareRequest) returns (SetDriveSMBShareResponse) {}
  // Webdav Drive
  rpc SetDriveWebdav (SetDriveWebdavRequest) returns (SetDriveWebdavResponse) {}
  rpc ListDriveWebdavDir (ListDriveWebdavDirRequest) returns (ListDriveWebdavDirResponse) {}
  // NFS Drive
  rpc SetDriveNFS (SetDriveNFSRequest) returns (SetDriveNFSResponse) {}
  rpc ListDriveNFSDir (ListDriveNFSDirRequest) returns (ListDriveNFSDirResponse) {}
  // S3 Compatible Drive
  rpc SetDriveS3 (SetDriveS3Request) returns (SetDriveS3Response) {}
  rpc ListDriveS3Buckets (ListDriveS3BucketsRequest) returns (ListDriveS3BucketsResponse) {}
  // Trash
  rpc MoveToTrash (MoveToTrashRequest) returns (MoveToTrashResponse) {}
  rpc ListTrash (ListTrashRequest) returns (ListTrashResponse) {}
  rpc RestoreFromTrash (RestoreFromTrashRequest) returns (RestoreFromTrashResponse) {}
  rpc EmptyTrash (EmptyTrashRequest) returns (EmptyTrashResponse) {}
  // Locked folder
  rpc MoveToLocked (MoveToLockedRequest) returns (MoveToLockedResponse) {}
  rpc ListLocked (ListLockedRequest) returns (ListLockedResponse) {}
  rpc RestoreFromLocked (RestoreFromLockedRequest) returns (RestoreFromLockedResponse) {}
  // Index management
  rpc RebuildIndex (RebuildIndexRequest) returns (stream RebuildIndexResponse) {}
  rpc GetIndexStats (GetIndexStatsRequest) returns (GetIndexStatsResponse) {}
  rpc ClearThumbnailCache (ClearThumbnailCacheRequest) returns (ClearThumbnailCacheResponse) {}
  // ML Photo Search
  rpc UpdatePhotoLabels (UpdatePhotoLabelsRequest) returns (UpdatePhotoLabelsResponse) {}
  rpc SearchPhotos (SearchPhotosRequest) returns (SearchPhotosResponse) {}
  rpc GetUnlabeledPhotos (GetUnlabeledPhotosRequest) returns (GetUnlabeledPhotosResponse) {}
}

// enum ContentType {
//   IMAGE_JPEG = 0;
//   IMAGE_PNG = 1;
//   IMAGE_GIF = 2;
// }

message ListByDateRequest {
  string date = 1; // YYYY:MM:DD
  int32 offset = 2;
  int32 maxReturn = 3;
}
message ListByDateResponse {
  bool success = 1;
  string message = 2;
  repeated string paths = 3;
}

message DeleteRequest {
  repeated string paths = 1;
}
message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message FilterNotUploadedRequestInfo {
  string name = 1;
  string date = 2;
  string id = 3;
}

message FilterNotUploadedRequest {
  repeated FilterNotUploadedRequestInfo photos = 1;
  bool isFinished = 2;
}
message FilterNotUploadedResponse {
  bool success = 1;
  string message = 2;
  repeated string notUploaedIDs = 3;
  bool isFinished = 4;
}

message SetDriveSMBRequest {
  string addr = 1;
  string username = 2;
  string password = 3;
  string share = 4;
  string root = 5;
}
message SetDriveSMBResponse {
  bool success = 1;
  string message = 2;
}

message ListDriveSMBSharesRequest {}
message ListDriveSMBSharesResponse {
  bool success = 1;
  string message = 2;
  repeated string shares = 3;
}

message ListDriveSMBDirRequest {
  string share = 1;
  string dir = 2;
}
message ListDriveSMBDirResponse {
  bool success = 1;
  string message = 2;
  repeated string dirs = 3;
}

message SetDriveSMBShareRequest {
  string share = 1;
  string root = 2;
}
message SetDriveSMBShareResponse {
  bool success = 1;
  string message = 2;
}

message SetDriveWebdavRequest {
  string addr = 1;
  string username = 2;
  string password = 3;
  string root = 4;
}
message SetDriveWebdavResponse {
  bool success = 1;
  string message = 2;
}

message ListDriveWebdavDirRequest {
  string dir = 1;
}
message ListDriveWebdavDirResponse {
  bool success = 1;
  string message = 2;
  repeated string dirs = 3;
}

message SetDriveNFSRequest {
  string addr = 1;
  string root = 2;
}
message SetDriveNFSResponse {
  bool success = 1;
  string message = 2;
}

message ListDriveNFSDirRequest {
  string dir = 1;
}
message ListDriveNFSDirResponse {
  bool success = 1;
  string message = 2;
  repeated string dirs = 3;
}

message SetDriveS3Request {
  string endpoint = 1;
  string region = 2;
  string accessKeyId = 3;
  string secretAccessKey = 4;
  string bucket = 5;
  string root = 6;
}
message SetDriveS3Response {
  bool success = 1;
  string message = 2;
}

message ListDriveS3BucketsRequest {}
message ListDriveS3BucketsResponse {
  bool success = 1;
  string message = 2;
  repeated string buckets = 3;
}

message MoveToTrashRequest {
  repeated string paths = 1;
}
message MoveToTrashResponse {
  bool success = 1;
  string message = 2;
}

message TrashItem {
  string originalPath = 1;
  string trashPath = 2;
  int64 trashedAt = 3;
  int64 size = 4;
}

message ListTrashRequest {
  int32 offset = 1;
  int32 maxReturn = 2;
}
message ListTrashResponse {
  bool success = 1;
  string message = 2;
  repeated TrashItem items = 3;
}

message RestoreFromTrashRequest {
  repeated string trashPaths = 1;
}
message RestoreFromTrashResponse {
  bool success = 1;
  string message = 2;
}

message EmptyTrashRequest {}
message EmptyTrashResponse {
  bool success = 1;
  string message = 2;
}

message MoveToLockedRequest {
  repeated string paths = 1;
}
message MoveToLockedResponse {
  bool success = 1;
  string message = 2;
}

message RestoreFromLockedRequest {
  repeated string lockedPaths = 1;
}
message RestoreFromLockedResponse {
  bool success = 1;
  string message = 2;
}

message ListLockedRequest {
  int32 offset = 1;
  int32 maxReturn = 2;
}
message ListLockedResponse {
  bool success = 1;
  string message = 2;
  repeated TrashItem items = 3;
}

message RebuildIndexRequest {}
message RebuildIndexResponse {
  bool success = 1;
  string message = 2;
  int32 totalFound = 3;
  bool isFinished = 4;
}

message GetIndexStatsRequest {}
message GetIndexStatsResponse {
  bool success = 1;
  string message = 2;
  int64 totalPhotos = 3;
  int64 cacheSizeBytes = 4;
  int64 lastIndexTimestamp = 5;
}

message ClearThumbnailCacheRequest {}
message ClearThumbnailCacheResponse {
  bool success = 1;
  string message = 2;
  int64 freedBytes = 3;
}

message UpdatePhotoLabelsRequest {
  string path = 1;
  repeated string labels = 2;
  repeated string faceIDs = 3;
  string text = 4;
}
message UpdatePhotoLabelsResponse {
  bool success = 1;
  string message = 2;
}

message SearchPhotosRequest {
  string query = 1;
}
message SearchPhotosResponse {
  bool success = 1;
  string message = 2;
  repeated string paths = 3;
}

message GetUnlabeledPhotosRequest {
  int32 limit = 1;
}
message GetUnlabeledPhotosResponse {
  bool success = 1;
  string message = 2;
  repeated string paths = 3;
}